# ChangeLog for sys-apps/iproute2
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/iproute2/ChangeLog,v 1.27 2005/02/07 04:12:56 kumba Exp $

  06 Feb 2005; Joshua Kinard <kumba@gentoo.org>
  iproute2-2.6.10.20050112-r1.ebuild:
  Marked stable on mips.

  31 Jan 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  iproute2-2.6.10.20050112-r1.ebuild:
  Stable on sparc

*iproute2-2.6.10.20050112-r1 (27 Jan 2005)

  27 Jan 2005; Jeremy Huddleston <eradicator@gentoo.org>
  +files/2.6.9.20041019-wrr.patch-r1, +files/2.6.9.20041106-esfq.patch,
  +iproute2-2.6.10.20050112-r1.ebuild:
  Revbump to fix esfq and wrr patches to work with the new version. This
  closes bug #79387.

  21 Jan 2005; Jeremy Huddleston <eradicator@gentoo.org>
  iproute2-2.6.10.20050112.ebuild:
  Multilib fixes.

  13 Jan 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  iproute2-2.6.9.20041019-r1.ebuild:
  Stable on sparc

*iproute2-2.6.10.20050112 (12 Jan 2005)

  12 Jan 2005; Mike Frysinger <vapier@gentoo.org>
  +iproute2-2.6.10.20050112.ebuild:
  Version bump.

  02 Jan 2005; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  20 Dec 2004; Dylan Carlson <absinthe@gentoo.org>
  iproute2-2.6.9.20040831.ebuild:
  Stable on amd64.

*iproute2-2.6.9.20041019-r1 (05 Dec 2004)

  05 Dec 2004; Mike Frysinger <vapier@gentoo.org>
  files/2.6.9.20041019-esqf.patch, files/2.6.9.20041019-wrr.patch,
  +iproute2-2.6.9.20041019-r1.ebuild, -iproute2-2.6.9.20041019.ebuild:
  Version bump to fix esfq/wrr registering with tc #73104 by David Pufer.

  01 Dec 2004; Gustavo Zacarias <gustavoz@gentoo.org>
  iproute2-2.6.9.20040831.ebuild:
  Stable on sparc

*iproute2-2.6.9.20041019 (30 Nov 2004)

  30 Nov 2004; Mike Frysinger <vapier@gentoo.org>
  +files/2.6.9.20041019-esqf.patch, +files/2.6.9.20041019-wrr.patch,
  +iproute2-2.6.9.20041019.ebuild:
  Version bump #72961 and include esqf/wrr algorithms #68948.
