@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/iproute2
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/iproute2/ChangeLog,v 1.27 2005/02/07 04:12:56 kumba Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/iproute2/ChangeLog,v 1.28 2005/02/10 02:48:01 vapier Exp $
+
+*iproute2-2.6.10.20050124 (09 Feb 2005)
+
+  09 Feb 2005; Mike Frysinger <vapier@gentoo.org>
+  +iproute2-2.6.10.20050124.ebuild:
+  Version bump.
 
   06 Feb 2005; Joshua Kinard <kumba@gentoo.org>
   iproute2-2.6.10.20050112-r1.ebuild:
